--- a/MCUProject/Scenes/DetailScreen/Cell/ComicsCollectionViewCell/ComicsCollectionViewCell.xib
+++ b/MCUProject/Scenes/DetailScreen/Cell/ComicsCollectionViewCell/ComicsCollectionViewCell.xib
@@ -1,21 +1,66 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ComicsCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ComicsCollectionViewCell" id="gTV-IL-0wX" customClass="ComicsCollectionViewCell" customModule="MCUProject" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="198" height="223"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="198" height="223"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2oH-Gr-SL5">
+                        <rect key="frame" x="0.0" y="0.0" width="198" height="223"/>
+                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P1p-Pa-BYk">
+                        <rect key="frame" x="0.0" y="207" width="198" height="16"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ilc-hN-hqM">
+                                <rect key="frame" x="8" y="8" width="182" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" systemColor="systemRedColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.1483382285" green="0.14836582540000001" blue="0.1483321786" alpha="0.8355083339261693" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Ilc-hN-hqM" firstAttribute="top" secondItem="P1p-Pa-BYk" secondAttribute="top" constant="8" id="QND-Ya-tvN"/>
+                            <constraint firstItem="Ilc-hN-hqM" firstAttribute="leading" secondItem="P1p-Pa-BYk" secondAttribute="leading" constant="8" id="VSL-6u-E6S"/>
+                            <constraint firstAttribute="trailing" secondItem="Ilc-hN-hqM" secondAttribute="trailing" constant="8" id="VdX-JS-q2s"/>
+                            <constraint firstAttribute="bottom" secondItem="Ilc-hN-hqM" secondAttribute="bottom" constant="8" id="mgy-De-J4k"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="2oH-Gr-SL5" secondAttribute="trailing" id="AH2-fB-iml"/>
+                <constraint firstItem="2oH-Gr-SL5" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="WkO-Zn-bI1"/>
+                <constraint firstAttribute="bottom" secondItem="P1p-Pa-BYk" secondAttribute="bottom" id="Xim-uo-bG2"/>
+                <constraint firstItem="2oH-Gr-SL5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="bbx-dc-lum"/>
+                <constraint firstItem="P1p-Pa-BYk" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="rnF-Qx-rN3"/>
+                <constraint firstAttribute="bottom" secondItem="2oH-Gr-SL5" secondAttribute="bottom" id="vIn-qr-pZ5"/>
+                <constraint firstAttribute="trailing" secondItem="P1p-Pa-BYk" secondAttribute="trailing" id="yZs-mN-Wq3"/>
+            </constraints>
+            <size key="customSize" width="198" height="223"/>
+            <connections>
+                <outlet property="comicsImageView" destination="2oH-Gr-SL5" id="oUa-M4-zH8"/>
+                <outlet property="comicsNameLabel" destination="Ilc-hN-hqM" id="8md-Tq-6Fw"/>
+            </connections>
+            <point key="canvasLocation" x="244.92753623188409" y="127.56696428571428"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
