--- a/MCUProject/Scenes/HomeScreen/Cell/CharacterCell/CharacterCollectionViewCell.xib
+++ b/MCUProject/Scenes/HomeScreen/Cell/CharacterCell/CharacterCollectionViewCell.xib
@@ -1,21 +1,94 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CharacterCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CharacterCollectionViewCell" id="gTV-IL-0wX" customClass="CharacterCollectionViewCell" customModule="MCUProject" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="358"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="358"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HBV-x2-Fj9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="358"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="85d-Sb-o4d">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="358"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pHI-h2-v74">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OY5-6x-UD6">
+                                        <rect key="frame" x="8" y="20" width="276" height="0.0"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                        <color key="textColor" systemColor="systemRedColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="unlike" translatesAutoresizingMaskIntoConstraints="NO" id="y7C-vU-Ws7">
+                                        <rect key="frame" x="292" y="10" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="VNL-jz-eCM"/>
+                                            <constraint firstAttribute="width" constant="20" id="cPW-P2-Pin"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.14117647059999999" green="0.12521111970000001" blue="0.1411784589" alpha="0.85032259710000002" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstItem="OY5-6x-UD6" firstAttribute="leading" secondItem="pHI-h2-v74" secondAttribute="leading" constant="8" id="3MQ-MV-DAc"/>
+                                    <constraint firstAttribute="trailing" secondItem="y7C-vU-Ws7" secondAttribute="trailing" constant="8" id="6qh-qk-opz"/>
+                                    <constraint firstItem="y7C-vU-Ws7" firstAttribute="centerY" secondItem="pHI-h2-v74" secondAttribute="centerY" id="M3O-jj-BOr"/>
+                                    <constraint firstItem="y7C-vU-Ws7" firstAttribute="leading" secondItem="OY5-6x-UD6" secondAttribute="trailing" constant="8" id="MmN-O8-VUg"/>
+                                    <constraint firstAttribute="height" constant="40" id="dTw-dF-IIp"/>
+                                    <constraint firstItem="OY5-6x-UD6" firstAttribute="centerY" secondItem="y7C-vU-Ws7" secondAttribute="centerY" id="f9a-ui-abl"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="85d-Sb-o4d" secondAttribute="bottom" id="Zt6-oy-Zgd"/>
+                            <constraint firstItem="85d-Sb-o4d" firstAttribute="top" secondItem="HBV-x2-Fj9" secondAttribute="top" id="c3c-NM-fdF"/>
+                            <constraint firstAttribute="trailing" secondItem="pHI-h2-v74" secondAttribute="trailing" id="eRy-im-8ZX"/>
+                            <constraint firstItem="pHI-h2-v74" firstAttribute="top" secondItem="HBV-x2-Fj9" secondAttribute="top" id="f3k-4a-MLv"/>
+                            <constraint firstItem="pHI-h2-v74" firstAttribute="leading" secondItem="HBV-x2-Fj9" secondAttribute="leading" id="kRp-Hf-HWX"/>
+                            <constraint firstItem="85d-Sb-o4d" firstAttribute="leading" secondItem="HBV-x2-Fj9" secondAttribute="leading" id="mPi-Hk-UaT"/>
+                            <constraint firstAttribute="trailing" secondItem="85d-Sb-o4d" secondAttribute="trailing" id="mkR-Pu-rCB"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstItem="HBV-x2-Fj9" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="34O-Mn-meP"/>
+                <constraint firstAttribute="bottom" secondItem="HBV-x2-Fj9" secondAttribute="bottom" id="E7o-Ak-aWM"/>
+                <constraint firstItem="HBV-x2-Fj9" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="b1U-CD-8gz"/>
+                <constraint firstAttribute="trailing" secondItem="HBV-x2-Fj9" secondAttribute="trailing" id="ybd-oL-Emc"/>
+            </constraints>
+            <size key="customSize" width="320" height="358"/>
+            <connections>
+                <outlet property="characterImageView" destination="85d-Sb-o4d" id="pNR-0O-hJF"/>
+                <outlet property="characterNameLabel" destination="OY5-6x-UD6" id="0JL-BI-rE9"/>
+                <outlet property="likeButton" destination="y7C-vU-Ws7" id="3HT-IM-GSc"/>
+            </connections>
+            <point key="canvasLocation" x="386.95652173913044" y="125.89285714285714"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="unlike" width="512" height="512"/>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
